# bam-io-throughput

./: README.md  meson.build
src/: main.cpp
subprojects/: htslib.wrap
